FIX: show-more div was behind the fa-icon

--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 4px;
   width: 100%;
+  z-index: 1;
 }
 
 .list-controls {
